--- a/configs/train-sample.yaml
+++ b/configs/train-sample.yaml
@@ -22,10 +22,10 @@ dataset:
     subsets:
         -   name: objaverse
             root_dirs:
-                - "../renderoutput"
+                - "home/volt_zhou/ProbNerf_Imp/probnerf/renderoutput"
             meta_path:
-                train: "../datasource/train/object-paths.json"
-                val: "../datasource/val/object-paths.json"
+                train: "home/volt_zhou/ProbNerf_Imp/probnerf/datasource/train/object-paths.json"
+                val: "home/volt_zhou/ProbNerf_Imp/probnerf/datasource/val/object-paths.json"
             sample_rate: 1.0
     sample_side_views: 3
     source_image_res: 224
